Implemented Payment Service
